--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "src":"cd reactfrontend && npm start",
+    "api":"cd ./api && npm start",
+    "start_full_app":"concurrently \"npm run src\" \"npm run api\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
